--- a/dist.ini
+++ b/dist.ini
@@ -22,5 +22,8 @@ DBI=0
 File::Slurp::Tiny=0
 JSON=0
 Log::Any=0
-Perinci::CmdLine::Any=0
+SQL::Schema::Versioned=0
 YAML::Syck=0
+
+; for cli: bin/local-cpan
+Perinci::CmdLine::Any=0
