--- a/dist.ini
+++ b/dist.ini
@@ -16,13 +16,20 @@ Complete=0.06
 
 perl=5.010001
 Archive::Zip=0
+;!lint-prereqs assume-used # undetected, via cli
+CPAN::Mini=0
 ;!lint-prereqs assume-used # undetected, used via DBI
 DBD::SQLite=0
 DBI=0
+File::HomeDir=0
 File::Slurp::Tiny=0
+IPC::System::Options=0
 JSON=0
 Log::Any=0
+;!lint-prereqs assume-used # undetected, via PERL5OPT
+LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 SQL::Schema::Versioned=0
+Version::Util=0
 YAML::Syck=0
 
 ; for cli: bin/local-cpan
