--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,7 @@ CPAN::Mini=0
 ;!lint-prereqs assume-used # undetected, used via DBI
 DBD::SQLite=0
 DBI=0
+ExtUtils::MakeMaker::Dump=0.03
 File::HomeDir=0
 File::Slurp::Tiny=0
 IPC::System::Options=0
@@ -28,6 +29,7 @@ JSON=0
 Log::Any=0
 ;!lint-prereqs assume-used # undetected, via PERL5OPT
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
+Module::Build::Dump=0.02
 SQL::Schema::Versioned=0
 Version::Util=0
 YAML::Syck=0
