Change dir to tempdir during indexing, because some files might still get extracted during indexing

--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,7 @@ CPAN::Mini=0
 DBD::SQLite=0
 DBI=0
 ExtUtils::MakeMaker::Dump=0.03
+File::chdir=0
 File::HomeDir=0
 File::Slurp::Tiny=0
 IPC::System::Options=0
