Add wrapper script for cpanm: lcpanm

--- a/dist.ini
+++ b/dist.ini
@@ -35,5 +35,8 @@ SQL::Schema::Versioned=0
 Version::Util=0
 YAML::Syck=0
 
-; for cli: bin/local-cpan
+; for cli: bin/lcpan
 Perinci::CmdLine::Any=0
+
+; for cli: bin/lcpanm
+App::ShellCompleter::cpanm=0
