--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.02
+version=0.03
 
 name=App-lcpan
 
@@ -39,4 +39,5 @@ YAML::Syck=0
 Perinci::CmdLine::Any=0
 
 ; for cli: bin/lcpanm
+;!lint-prereqs assume-used # undetected, via tab completion
 App::ShellCompleter::cpanm=0
