Use Perinci::CmdLine::Util::Config to get lcpan configuration without running the binary

--- a/dist.ini
+++ b/dist.ini
@@ -41,3 +41,5 @@ Perinci::CmdLine::Any=0
 ; for cli: bin/lcpanm
 ;!lint-prereqs assume-used # undetected, via tab completion
 App::ShellCompleter::cpanm=0
+Perinci::CmdLine::Util::Config=0
+
