Add option to update-index: --num-backups (default to 7), to help debug update bug

--- a/dist.ini
+++ b/dist.ini
@@ -26,6 +26,7 @@ File::Slurp::Tiny=0
 IPC::System::Options=0
 JSON=0
 Log::Any=0
+Logfile::Rotate=0
 ;!lint-prereqs assume-used # undetected, via PERL5OPT
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 SQL::Schema::Versioned=0
