--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.13
+version=0.14
 
 name=App-lcpan
 
@@ -18,6 +18,7 @@ perl=5.010001
 Archive::Zip=0
 ;!lint-prereqs assume-used # undetected, via cli
 CPAN::Mini=0
+Complete::Util=0
 ;!lint-prereqs assume-used # undetected, used via DBI
 DBD::SQLite=0
 DBI=0
