Replace Module::CoreList->is_core with Module::CoreList::More->is_still_core

--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,7 @@ Log::Any=0
 Logfile::Rotate=0
 ;!lint-prereqs assume-used # undetected, via PERL5OPT
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
+Module::CoreList::More=0.04
 SQL::Schema::Versioned=0
 Version::Util=0
 YAML::Syck=0
