--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.20
+version=0.21
 
 name=App-lcpan
 
@@ -15,6 +15,7 @@ Rinci=1.1.0
 Complete=0.06
 
 perl=5.010001
+experimental=0
 Archive::Zip=0
 ;!lint-prereqs assume-used # undetected, via cli
 CPAN::Mini=0
@@ -24,6 +25,7 @@ DBD::SQLite=0
 DBI=0
 File::HomeDir=0
 File::Slurp::Tiny=0
+HTTP::Response=0
 IPC::System::Options=0.08
 JSON=0
 Log::Any=0
@@ -31,6 +33,7 @@ Logfile::Rotate=0
 ;!lint-prereqs assume-used # undetected, via PERL5OPT
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 Module::CoreList::More=0.04
+Module::Patch=0.12
 SQL::Schema::Versioned=0
 Version::Util=0
 YAML::Syck=0
