Add test: xt/author/sql_schema_versioned.t

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,9 @@ name=App-lcpan
 :version=0.23
 
 [Prereqs / TestRequires]
-;Test::More=0.98
+Test::More=0.98
+Test::SQL::Schema::Versioned=0.15
+Test::WithDB::SQLite=0.05
 
 [Prereqs]
 ;!lint-prereqs assume-used # spec
