[Bugfix] Forget to clone data

--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,7 @@ DBD::SQLite=0
 DBI=0
 File::HomeDir=0
 File::Slurp::Tiny=0
+Function::Fallback::CoreOrPP=0
 HTTP::Response=0
 IPC::System::Options=0.08
 JSON=0
