Switch from YAML::Syck to YAML::XS (YAML::Syck can't parse things like '--- # YAML1.0' header)

--- a/dist.ini
+++ b/dist.ini
@@ -39,7 +39,7 @@ Module::CoreList::More=0.04
 Module::Patch=0.12
 SQL::Schema::Versioned=0.18
 Version::Util=0
-YAML::Syck=0
+YAML::XS=0
 
 ; for cli: bin/lcpan
 Module::List=0
