--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.36
+version=0.37
 
 name=App-lcpan
 
@@ -36,6 +36,7 @@ Logfile::Rotate=0
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 Module::CoreList::More=0.04
 Module::Patch=0.12
+;!lint-prereqs assume-used # via open() encoding
 PerlIO::gzip=0
 SQL::Schema::Versioned=0.18
 Version::Util=0
