Add convenience subcommand: extract-mod

--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,7 @@ Complete=0.06
 
 perl=5.010001
 experimental=0
+Archive::Extract=0
 Archive::Zip=0
 ;!lint-prereqs assume-used # undetected, via cli
 CPAN::Mini=0
