--- a/dist.ini
+++ b/dist.ini
@@ -30,6 +30,7 @@ File::HomeDir=0
 File::Slurp::Tiny=0
 Function::Fallback::CoreOrPP=0
 HTTP::Response=0
+IO::Prompt::I18N=0
 IPC::System::Options=0.08
 Log::Any=0
 Logfile::Rotate=0
