--- a/dist.ini
+++ b/dist.ini
@@ -44,8 +44,8 @@ SQL::Schema::Versioned=0.18
 Version::Util=0
 
 ; for cli: bin/lcpan
-Module::List=0
 Perinci::CmdLine::Any=0.09
+PERLANCAR::Module::List=0
 
 ; for cli: bin/lcpanm
 ;!lint-prereqs assume-used # undetected, via tab completion
