Shave about 8ms (64ms -> 56ms) when doing completion by replacing Log::Any with Log::Any::IfLOG

--- a/dist.ini
+++ b/dist.ini
@@ -32,7 +32,7 @@ Function::Fallback::CoreOrPP=0
 HTTP::Response=0
 IO::Prompt::I18N=0
 IPC::System::Options=0.08
-Log::Any=0
+Log::Any::IfLOG=0
 Logfile::Rotate=0
 ;!lint-prereqs assume-used # undetected, via PERL5OPT
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
