[dzil] Update syntax of lint-prereqs directive (-> lint_prereqs) to be more IOD-compliant

--- a/dist.ini
+++ b/dist.ini
@@ -11,19 +11,19 @@ Test::SQL::Schema::Versioned=0.15
 Test::WithDB::SQLite=0.05
 
 [Prereqs]
-;!lint-prereqs assume-used # spec
+;!lint_prereqs assume-used # spec
 Rinci=1.1.0
-;!lint-prereqs assume-used # spec
+;!lint_prereqs assume-used # spec
 Complete=0.06
 
 perl=5.010001
 experimental=0
 Archive::Extract=0
 Archive::Zip=0
-;!lint-prereqs assume-used # undetected, via cli
+;!lint_prereqs assume-used # undetected, via cli
 CPAN::Mini=0
 Complete::Util=0
-;!lint-prereqs assume-used # undetected, used via DBI
+;!lint_prereqs assume-used # undetected, used via DBI
 DBD::SQLite=0
 DBI=0
 File::HomeDir=0
@@ -34,11 +34,11 @@ IO::Prompt::I18N=0
 IPC::System::Options=0.08
 Log::Any::IfLOG=0
 Logfile::Rotate=0
-;!lint-prereqs assume-used # undetected, via PERL5OPT
+;!lint_prereqs assume-used # undetected, via PERL5OPT
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 Module::CoreList::More=0.04
 Module::Patch=0.12
-;!lint-prereqs assume-used # via open() encoding
+;!lint_prereqs assume-used # via open() encoding
 PerlIO::gzip=0
 SQL::Schema::Versioned=0.18
 Version::Util=0
@@ -48,6 +48,6 @@ Perinci::CmdLine::Any=0.09
 PERLANCAR::Module::List=0
 
 ; for cli: bin/lcpanm
-;!lint-prereqs assume-used # undetected, via tab completion
+;!lint_prereqs assume-used # undetected, via tab completion
 App::ShellCompleter::cpanm=0
 Perinci::CmdLine::Util::Config=0
