--- a/dist.ini
+++ b/dist.ini
@@ -11,11 +11,6 @@ Test::SQL::Schema::Versioned=0.15
 Test::WithDB::SQLite=0.05
 
 [Prereqs]
-;!lint_prereqs assume-used # spec
-Rinci=1.1.0
-;!lint_prereqs assume-used # spec
-Complete=0.06
-
 perl=5.010001
 experimental=0
 Archive::Extract=0
@@ -51,3 +46,9 @@ PERLANCAR::Module::List=0
 ;!lint_prereqs assume-used # undetected, via tab completion
 App::ShellCompleter::cpanm=0
 Perinci::CmdLine::Util::Config=0
+
+[Prereqs / DevelopRecommends]
+;!lint_prereqs assume-used # spec
+Rinci=1.1.0
+;!lint_prereqs assume-used # spec
+Complete=0.06
