Adjust to Complete::Util 0.36 (complete_file() split to Complete-File)

--- a/dist.ini
+++ b/dist.ini
@@ -17,7 +17,7 @@ Archive::Extract=0
 Archive::Zip=0
 ;!lint_prereqs assume-used # undetected, via cli
 CPAN::Mini=0
-Complete::Util=0
+Complete::File=0
 ;!lint_prereqs assume-used # undetected, used via DBI
 DBD::SQLite=0
 DBI=0
