deps: Add --with-xs-or-pp to show dependency is XS/PP

--- a/dist.ini
+++ b/dist.ini
@@ -33,6 +33,7 @@ Logfile::Rotate=0
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 Module::CoreList::More=0.04
 Module::Patch=0.12
+Module::XSOrPP=0
 ;!lint_prereqs assume-used # via open() encoding
 PerlIO::gzip=0
 SQL::Schema::Versioned=0.18
