[Bugfix] file should be indexed by (cpanid,name) not (name) because PAUSE allows two authors to have the same filename

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,22 @@ Test::WithDB::SQLite=0.05
 
 [Prereqs]
 perl=5.010001
+
+; core modules
+
+base=0
+strict=0
+warnings=0
+Archive::Tar=0
+Exporter=0
+File::Copy=0
+File::Temp=0
+IO::Compress::Gzip=0
+Parse::CPAN::Meta=0
+POSIX=0
+
+; non-core modules
+
 experimental=0
 Archive::Extract=0
 Archive::Zip=0
@@ -22,7 +38,6 @@ Complete::File=0
 DBD::SQLite=0
 DBI=0
 File::HomeDir=0
-File::Slurp::Tiny=0
 Function::Fallback::CoreOrPP=0.07
 HTTP::Response=0
 IO::Prompt::I18N=0
