--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.66
+version=0.67
 
 name=App-lcpan
 
@@ -16,6 +16,7 @@ perl=5.010001
 ; core modules
 
 base=0
+parent=0
 strict=0
 warnings=0
 Archive::Tar=0
@@ -23,7 +24,9 @@ Exporter=0
 File::Copy=0
 File::Temp=0
 IO::Compress::Gzip=0
+List::Util=0
 Parse::CPAN::Meta=0
+Pod::Simple::Methody=0
 POSIX=0
 
 ; non-core modules
