--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.68
+version=0.69
 
 name=App-lcpan
 
@@ -52,6 +52,7 @@ LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 Module::CoreList::More=0.04
 Module::Patch=0.12
 Module::XSOrPP=0
+Perinci::Object=0
 ;!lint_prereqs assume-used # via open() encoding
 PerlIO::gzip=0
 SQL::Schema::Versioned=0.18
