doc: Add option --html to open browser and show the HTML documentation

--- a/dist.ini
+++ b/dist.ini
@@ -16,55 +16,98 @@ perl=5.010001
 ; core modules
 
 base=0
+
 parent=0
+
 strict=0
+
 warnings=0
+
 Archive::Tar=0
+
 Exporter=0
+
 File::Copy=0
+
 File::Temp=0
+
 IO::Compress::Gzip=0
+
 List::Util=0
+
 Parse::CPAN::Meta=0
+
 Pod::Simple::Methody=0
+
 POSIX=0
 
 ; non-core modules
 
 experimental=0
+
 Archive::Extract=0
+
 Archive::Zip=0
+
+Browser::Open=0
+
 ;!lint_prereqs assume-used # undetected, via cli
 CPAN::Mini=0
+
 Complete::File=0
+
 ;!lint_prereqs assume-used # undetected, used via DBI
 DBD::SQLite=0
+
 DBI=0
+
 File::HomeDir=0
+
+File::Slurper=0
+
+File::Util::Tempdir=0
+
 Function::Fallback::CoreOrPP=0.07
+
 HTTP::Response=0
+
 IO::Prompt::I18N=0
+
 IPC::System::Options=0.22
+
 Log::Any::IfLOG=0.07
+
 Logfile::Rotate=0
+
 ;!lint_prereqs assume-used # undetected, via PERL5OPT
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
+
 Module::CoreList::More=0.04
+
 Module::Patch=0.12
+
 Module::XSOrPP=0
+
 Perinci::Object=0
+
 ;!lint_prereqs assume-used # via open() encoding
 PerlIO::gzip=0
+
 SQL::Schema::Versioned=0.18
+
 Version::Util=0
 
 ; for cli: bin/lcpan
+
 Perinci::CmdLine::Any=0.09
+
 PERLANCAR::Module::List=0
 
 ; for cli: bin/lcpanm
+
 ;!lint_prereqs assume-used # undetected, via tab completion
 App::ShellCompleter::cpanm=0
+
 Perinci::CmdLine::Util::Config=0
 
 [Prereqs / DevelopRecommends]
