--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.73
+version=0.74
 
 name=App-lcpan
 
@@ -65,7 +65,7 @@ File::HomeDir=0
 
 File::Slurper=0
 
-;File::Util::Tempdir=0
+File::Util::Tempdir=0
 
 Function::Fallback::CoreOrPP=0.07
 
