Indexing of subs

--- a/dist.ini
+++ b/dist.ini
@@ -54,6 +54,8 @@ Browser::Open=0
 ;!lint_prereqs assume-used # undetected, via cli
 CPAN::Mini=0
 
+Compiler::Lexer=0
+
 Complete::File=0
 
 ;!lint_prereqs assume-used # undetected, used via DBI
