--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.79
+version=0.80
 
 name=App-lcpan
 
@@ -109,3 +109,6 @@ Perinci::CmdLine::Util::Config=0
 [Prereqs / DevelopRecommends]
 ;!lint_prereqs assume-used # spec
 Rinci=1.1.0
+
+[Acme::CPANLists::Whitelist]
+module=Log::Any
