--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=1.001
+version=1.002
 
 name=App-lcpan
 
@@ -26,6 +26,7 @@ Browser::Open=0
 Clone::Util=0.03
 Compiler::Lexer=0
 Complete::File=0
+Complete::Util=0
 ;!lint_prereqs assume-used # undetected, via cli
 CPAN::Mini=0
 ;!lint_prereqs assume-used # undetected, used via DBI
