--- a/dist.ini
+++ b/dist.ini
@@ -53,6 +53,8 @@ LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 Module::CoreList::More=0.04
 Module::Patch=0.12
 Module::XSOrPP=0
+;!lint_prereqs assume-used "undetected, used via CLI"
+OrePAN=0
 Parse::CPAN::Meta=0
 Perinci::CmdLine::Any=0.13
 Perinci::CmdLine::Util::Config=0
@@ -62,6 +64,7 @@ PERLANCAR::Module::List=0
 PerlIO::gzip=0
 Pod::Simple::Methody=0
 POSIX=0
+Proc::ChildError=0
 SQL::Schema::Versioned=0.18
 Version::Util=0
 
