--- a/dist.ini
+++ b/dist.ini
@@ -17,7 +17,7 @@ experimental=0
 parent=0
 strict=0
 warnings=0
-;!lint_prereqs assume-used # undetected, via tab completion
+;!lint_prereqs assume-used "undetected, via tab completion"
 App::ShellCompleter::cpanm=0
 Archive::Extract=0
 Archive::Tar=0
@@ -27,9 +27,9 @@ Clone::Util=0.03
 Compiler::Lexer=0
 Complete::File=0
 Complete::Util=0.50
-;!lint_prereqs assume-used # undetected, via cli
+;!lint_prereqs assume-used "undetected, via cli"
 CPAN::Mini=0
-;!lint_prereqs assume-used # undetected, used via DBI
+;!lint_prereqs assume-used "undetected, used via DBI"
 DBD::SQLite=0
 DBI=0
 Encode=0
@@ -48,7 +48,7 @@ List::Util=0
 Log::Any=0
 Log::Any::IfLOG=0.07
 Logfile::Rotate=0
-;!lint_prereqs assume-used # undetected, via PERL5OPT
+;!lint_prereqs assume-used "undetected, via PERL5OPT"
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 Module::CoreList::More=0.04
 Module::Patch=0.12
@@ -60,7 +60,7 @@ Perinci::CmdLine::Any=0.13
 Perinci::CmdLine::Util::Config=0
 Perinci::Object=0
 PERLANCAR::Module::List=0
-;!lint_prereqs assume-used # via open() encoding
+;!lint_prereqs assume-used "via open() encoding"
 PerlIO::gzip=0
 Pod::Simple::Methody=0
 POSIX=0
@@ -69,7 +69,7 @@ SQL::Schema::Versioned=0.18
 Version::Util=0
 
 [Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used # spec
+;!lint_prereqs assume-used "spec"
 Rinci=1.1.79
 
 [Acme::CPANLists::Whitelist]
