[dist] Moving spec prereq from DevelopRecommends to DevelopSuggests with _SPEC:: prefix

--- a/dist.ini
+++ b/dist.ini
@@ -68,9 +68,5 @@ Proc::ChildError=0
 SQL::Schema::Versioned=0.18
 Version::Util=0
 
-[Prereqs / DevelopRecommends]
-;!lint_prereqs assume-used "spec"
-Rinci=1.1.79
-
-[Acme::CPANLists::Whitelist]
-module=Log::Any
+[Prereqs / DevelopSuggests]
+_SPEC::Rinci=1.1.79
