Allow phase and rel with values /^x_/

--- a/dist.ini
+++ b/dist.ini
@@ -58,7 +58,7 @@ OrePAN=0
 Parse::CPAN::Meta=0
 Perinci::CmdLine::Any=0.13
 Perinci::CmdLine::Util::Config=0
-Perinci::Object=0
+Perinci::Object=0.26
 PERLANCAR::Module::List=0
 ;!lint_prereqs assume-used "via open() encoding"
 PerlIO::gzip=0
@@ -70,3 +70,6 @@ Version::Util=0
 
 [Prereqs / DevelopSuggests]
 _SPEC::Rinci=1.1.79
+
+[Acme::CPANLists::Whitelist]
+module=Log::Any
