[dist] Fix expressing follow-spec prereq relationship with x_spec

--- a/dist.ini
+++ b/dist.ini
@@ -68,8 +68,10 @@ Proc::ChildError=0
 SQL::Schema::Versioned=0.18
 Version::Util=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.79
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.79
 
 [Acme::CPANLists::Whitelist]
 module=Log::Any
