--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,10 @@
-version=1.015
+version=1.016
+copyright_year=2015-2017
 
 name=App-lcpan
 
 [@Author::PERLANCAR]
-:version=0.53
+:version=0.54
 
 [Prereqs / TestRequires]
 Test::More=0.98
