Add script: lcpanm-script

--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ version=1.017
 name=App-lcpan
 
 [@Author::PERLANCAR]
-:version=0.54
+:version=0.55
 
 [Prereqs / TestRequires]
 Test::More=0.98
@@ -17,6 +17,8 @@ experimental=0
 parent=0
 strict=0
 warnings=0
+;!lint_prereqs assume-used "undetected, via tab completion (_cpanm-script)"
+App::cpanm::script=0.002
 ;!lint_prereqs assume-used "undetected, via tab completion"
 App::ShellCompleter::cpanm=0
 Archive::Extract=0
