--- a/dist.ini
+++ b/dist.ini
@@ -49,6 +49,7 @@ IPC::System::Options=0.27
 List::Util=0
 Log::Any=0
 Log::Any::IfLOG=0.07
+Log::ger=0
 Logfile::Rotate=0
 ;!lint_prereqs assume-used "undetected, via PERL5OPT"
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
@@ -75,5 +76,3 @@ Version::Util=0
 -relationship=x_spec
 Rinci=1.1.79
 
-[Acme::CPANLists::Whitelist]
-module=Log::Any
