--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=1.032
+version=1.033
 
 name=App-lcpan
 
@@ -49,7 +49,7 @@ IO::Compress::Gzip=0
 IO::Prompt::I18N=0
 IPC::System::Options=0.331
 List::Util=1.45
-Log::ger=0.023
+Log::ger=0.027
 Logfile::Rotate=0
 ;!lint_prereqs assume-used "undetected, via PERL5OPT"
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
@@ -60,7 +60,8 @@ Module::XSOrPP=0
 OrePAN=0
 Parse::CPAN::Meta=0
 Perinci::CmdLine::Any=0.13
-Perinci::CmdLine::Util::Config=1.721
+Perinci::CmdLine::Util::Config=1.722
+Perinci::CmdLineX::CommonOptions::SelfUpgrade=0
 Perinci::Object=0.310
 PERLANCAR::Module::List=0
 ;!lint_prereqs assume-used "via open() encoding"
@@ -78,5 +79,5 @@ App::lcpan::Bootstrap=0
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
-Rinci=1.1.87
+Rinci=1.1.90
 
