Replace PERLANCAR::Module::List with Module::List::Tiny

--- a/dist.ini
+++ b/dist.ini
@@ -57,6 +57,7 @@ LWP::Protocol::Patch::CountBytesIn=0
 ;!lint_prereqs assume-used "undetected, via PERL5OPT"
 LWP::UserAgent::Patch::FilterMirrorMaxSize=0
 Module::CoreList::More=0.04
+Module::List::Tiny=0
 Module::Patch=0.270
 Module::XSOrPP=0
 Number::Format::Metric=0
@@ -67,7 +68,6 @@ Perinci::CmdLine::Any=0.13
 Perinci::CmdLine::Util::Config=1.722
 Perinci::CmdLineX::CommonOptions::SelfUpgrade=0.003
 Perinci::Object=0.310
-PERLANCAR::Module::List=0.004004
 ;!lint_prereqs assume-used "via open() encoding"
 PerlIO::gzip=0
 Pod::Simple::Methody=0
