--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=1.054
+version=1.055
 
 name=App-lcpan
 
@@ -6,6 +6,9 @@ name=App-lcpan
 :version=0.600
 
 [Prereqs / TestRequires]
+File::Copy::Recursive=0
+FindBin=0
+JSON::MaybeXS=0
 Test::More=0.98
 Test::SQL::Schema::Versioned=0.15
 Test::WithDB::SQLite=0.08
