Avoid error when testing database schema version upgrades

--- a/dist.ini
+++ b/dist.ini
@@ -37,6 +37,7 @@ CPAN::Mini=0
 ;!lint_prereqs assume-used "undetected, used via DBI"
 DBD::SQLite=0
 DBI=0
+DBIx::Util::Schema=0
 Encode=0
 Exporter=5.57
 File::Copy=0
