--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ name=App-lcpan
 File::Copy::Recursive=0
 FindBin=0
 JSON::MaybeXS=0
+Test::Deep=0
 Test::More=0.98
 Test::SQL::Schema::Versioned=0.15
 Test::WithDB::SQLite=0.08
