--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=1.057
+version=1.058
 
 name=App-lcpan
 
@@ -74,12 +74,14 @@ Perinci::CmdLine::Any=0.13
 Perinci::CmdLine::Util::Config=1.722
 Perinci::CmdLineX::CommonOptions::SelfUpgrade=0.003
 Perinci::Object=0.310
+Perinci::Result::Format::Lite=0.273
 ;!lint_prereqs assume-used "via open() encoding"
 PerlIO::gzip=0
 Pod::Simple::Methody=0
 POSIX=0
 Proc::ChildError=0
 SQL::Schema::Versioned=0.234
+Text::Table::Org=0
 Version::Util=0.731
 
 [Prereqs / RuntimeRecommends]
