[subcommand authors-by-script-count] Add proper rank column

--- a/dist.ini
+++ b/dist.ini
@@ -34,6 +34,7 @@ Complete::File=0.440
 Complete::Util=0.608
 ;!lint_prereqs assume-used "undetected, via cli"
 CPAN::Mini=0
+Data::TableData::Rank=0
 ;!lint_prereqs assume-used "undetected, used via DBI"
 DBD::SQLite=0
 DBI=0
@@ -55,7 +56,7 @@ IO::Compress::Gzip=0
 IO::Prompt::I18N=0
 IPC::System::Options=0.339
 JSON::PP=0
-List::Util=1.45
+List::Util=1.54
 Log::ger=0.038
 Logfile::Rotate=0
 ;!lint_prereqs assume-used "undetected, via PERL5OPT"
@@ -75,7 +76,7 @@ Perinci::CmdLine::Any=0.13
 Perinci::CmdLine::Util::Config=1.724
 Perinci::CmdLineX::CommonOptions::SelfUpgrade=0.003
 Perinci::Object=0.311
-Perinci::Result::Format::Lite=0.277
+Perinci::Result::Format::Lite=0.280
 ;!lint_prereqs assume-used "via open() encoding"
 PerlIO::gzip=0
 Pod::Simple::Methody=0
