--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,15 @@
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
 version=1.068
 
 name=App-lcpan
 
 [@Author::PERLANCAR]
-:version=0.603
+:version=0.606
 
 [Prereqs / TestRequires]
 File::Copy::Recursive=0
@@ -76,14 +82,14 @@ Perinci::CmdLine::Any=0.13
 Perinci::CmdLine::Util::Config=1.724
 Perinci::CmdLineX::CommonOptions::SelfUpgrade=0.003
 Perinci::Object=0.311
-Perinci::Result::Format::Lite=0.280
+Perinci::Result::Format::Lite=0.286
 ;!lint_prereqs assume-used "via open() encoding"
 PerlIO::gzip=0
 Pod::Simple::Methody=0
 POSIX=0
 Proc::ChildError=0
 SQL::Schema::Versioned=0.234
-Text::Table::Org=0
+Text::Table::Org=0.031
 Version::Util=0.731
 
 [Prereqs / RuntimeRecommends]
@@ -93,5 +99,4 @@ App::lcpan::Bootstrap=0
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
-Rinci=1.1.96
-
+Rinci=1.1.101
