--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ copyright_holder = perlancar <perlancar@cpan.org>
 license = Perl_5
 ;---------------------------------
 
-version=1.070
+version=1.070_001
 
 name=App-lcpan
 
@@ -99,4 +99,5 @@ App::lcpan::Bootstrap=0
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
-Rinci=1.1.101
+Rinci=1.1.102
+
