--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ copyright_holder = perlancar <perlancar@cpan.org>
 license = Perl_5
 ;---------------------------------
 
-version=1.070_001
+version=1.071
 
 name=App-lcpan
 
@@ -100,4 +100,3 @@ App::lcpan::Bootstrap=0
 -phase=develop
 -relationship=x_spec
 Rinci=1.1.102
-
