--- a/dist.ini
+++ b/dist.ini
@@ -4,12 +4,12 @@ copyright_holder = perlancar <perlancar@cpan.org>
 license = Perl_5
 ;---------------------------------
 
-version=1.073
+version=1.074
 
 name=App-lcpan
 
 [@Author::PERLANCAR]
-:version=0.606
+:version=0.608
 
 [Prereqs / TestRequires]
 File::Copy::Recursive=0
@@ -82,6 +82,7 @@ Perinci::CmdLine::Util::Config=1.725
 Perinci::CmdLineX::CommonOptions::SelfUpgrade=0.003
 Perinci::Object=0.311
 Perinci::Result::Format::Lite=0.286
+Perinci::Sub::Util=0.471
 ;!lint_prereqs assume-used "via open() encoding"
 PerlIO::gzip=0
 Pod::Simple::Methody=0
